deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname
spec:
  selector:
    matchLabels:
      app: node-hostname
  template:
    metadata:
      labels:
        app: node-hostname
    spec:
      containers:
      - name: node-hostname
        image: public.ecr.aws/w2w4u1m9/node-hostname:0.0.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
