service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
spec:
  type: LoadBalancer
  selector:
    app: node-hostname
  ports:
  - port: 3000
    targetPort: 3000
